*Added reCAPTCHA2 *Updated Resume *Fixed styling for “Download PDF” on mobile devices

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -221,6 +221,12 @@ page-container {
       }
 
       a {
+        @media (max-width: $small-responsive-break) {
+          .dlpdf {
+            text-align: center;
+          }
+        }
+
         &:hover {
           opacity: 1;
         }
